# kalman_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD
basic/: sdkconfig
basic/main/: CMakeLists.txt  console_example_main.cpp  idf_component.yml
basic/main/include/: linearModel.h
hello_world/main/: CMakeLists.txt  hello_world_main.cpp  linearModel.cpp  matops.cpp
hello_world/main/include/: matops.h
src/: linearModel.cpp  main.cpp  matops.cpp
